# Horus

./: .dockerignore  .gitignore  .lvimrc  Dockerfile  Horus.cabal  Makefile  README.md  Snippets.hi  Snippets.hs  TextToMath.cabal  TextToMath.hs  bs-config.js  build  make-report  package.json  repl  run  server.tix  tests.tix
Calculator/: .Scanner.hs.swp  Scanner.hi  Scanner.hs  ScannerTests.hi  ScannerTests.hs
api/: Horus.hs  Serializer.hs  Server.hs  TextToMath.hs  UserState.hs
app/: app.module.js  directives.js  filters.js
calculator/: Calculator.hs
calculator/Calculator/: ASTPass.hs  Canon.hs  DeepSeq.hs  Error.hs  Evaluator.hs  Functions.hs  Parser.hs  SynCheck.hs  VarCheck.hs
calculator/Calculator/ASTPass/: ConstExpansion.hs  SynCheck.hs
calculator/Calculator/Canon/: Internal.hs
calculator/Calculator/Data/: AST.hs  Decimal.hs  Env.hs  Function.hs  Result.hs
calculator/Calculator/Evaluator/: Helpers.hs
calculator/Calculator/Parser/: Helpers.hs
calculator/Calculator/SynCheck/: Internal.hs
calculator/Calculator/VarCheck/: Internal.hs
conf/: nginx.conf
css/: homepage.css
reports/: result
reports/html/: Main.hs.html  hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html
reports/html/TextToMath-0.1.0.0/: Calculator.Parser.hs.html  Calculator.Scanner.hs.html
reports/mix/: Calculator.Parser.Tests.mix  Calculator.Scanner.Tests.mix  Main.mix
reports/mix/TextToMath-0.1.0.0/: Calculator.Parser.mix  Calculator.Scanner.mix
resources/css/: app.css  homepage.css
resources/html/: help.html  index.html
resources/js/: app.js  homepage.js
resources/js/lib/: foundation.min.js
src/: Calculator.hs
src/Calculator/: Evaluator.hs  Functions.hs  Lexer.hs  Parser.hs  Scanner.hs
src/Calculator/Data/: AST.hs  Token.hs
src/Calculator/Parser/: Helpers.hs
src/api/: Horus.hs  Serializer.hs  Server.hs  UserState.hs
src/calculator-cli/: Main.hs
src/calculator-server/: Horus.hs  Server.hs
src/calculator/Calculator/: Database.hs  Evaluator.hs  Functions.hs  Parser.hs
src/calculator/Calculator/ASTPass/: ConstExpansion.hs
src/calculator/Calculator/Canon/: Internal.hs
src/calculator/Calculator/Data/: AST.hs  Decimal.hs  Function.hs  Result.hs
src/calculator/Calculator/Database/: UserState.hs
src/calculator/Calculator/Parser/: Helpers.hs
src/resources/html/: help.html
src/resources/js/lib/: angular-local-storage.min.js
src/tests/: TestServer.hs  protractor.conf.js
src/tests/integration/: TestHelpers.hs  TestSuite.hs
src/tests/unit/: app.js
tests/: TestServer.hs  TestSuite.hs  Tests.hs  karma.conf.js  protractor.conf.js
tests/Calculator/: Tests.hs
tests/Calculator/Evaluator/: Tests.hs
tests/Calculator/Lexer/: Tests.hs
tests/Calculator/Parser/: Tests.hs
tests/Calculator/Scanner/: Tests.hs
tests/Tests/: Scanner.hs
tests/api/: Horus.js  TextToMath.js
tests/e2e/: homepage.js
tests/integration/: TestHelpers.hs  TestSuite.hs
tests/integration/Calculator/ASTPass/SynCheck/: Tests.hs
tests/integration/Calculator/Canon/: Tests.hs
tests/integration/Calculator/Data/Function/: Tests.hs
tests/integration/Calculator/Evaluator/: Tests.hs
tests/integration/Calculator/Functions/: Tests.hs
tests/integration/Calculator/Parser/: Tests.hs
tests/integration/Calculator/SynCheck/: Tests.hs
tests/integration/Calculator/VarCheck/: Tests.hs
tests/unit/: app.js
textToMath-web/: Serializer.hs  Server.hs  Snippets.hs  TextToMath.hs  UserState.hs
