name:                Horus
version:             0.1.0.0
homepage:            http://github.com/nikklassen/Horus
author:              Nik Klassen
build-type:          Simple
cabal-version:       >=1.10

executable Horus
  main-is:             api/Server.hs
  other-extensions:    DeriveDataTypeable,
                       DeriveGeneric,
                       DoAndIfThenElse,
                       OverloadedStrings,
                       PatternSynonyms,
                       QuasiQuotes,
                       RecordWildCards,
                       ScopedTypeVariables,
                       TemplateHaskell,
                       TypeFamilies
  build-depends:       HUnit,
                       acid-state,
                       aeson,
                       base,
                       bytestring,
                       containers,
                       deepseq,
                       deepseq-generics,
                       happstack-server,
                       lifted-base,
                       mtl,
                       numbers,
                       parsec,
                       safecopy,
                       syb,
                       system-uuid,
                       template-haskell,
                       test-framework,
                       test-framework-hunit,
                       testpack,
                       text,
                       transformers
