name:                Horus
version:             0.1.0.0
homepage:            http://github.com/nikklassen/Horus
author:              Nik Klassen
build-type:          Simple
cabal-version:       >=1.22

executable Horus
  default-language:    Haskell2010
  main-is:             api/Server.hs
  other-extensions:    DeriveDataTypeable,
                       DeriveGeneric,
                       DoAndIfThenElse,
                       OverloadedStrings,
                       PatternSynonyms,
                       QuasiQuotes,
                       RecordWildCards,
                       ScopedTypeVariables,
                       TemplateHaskell,
                       TypeFamilies
  build-depends:       HUnit,
                       acid-state,
                       aeson,
                       base,
                       bytestring,
                       containers,
                       deepseq,
                       deepseq-generics,
                       happstack-server,
                       lifted-base,
                       mtl ==2.2.1,
                       numbers,
                       parsec,
                       safecopy,
                       syb,
                       system-uuid,
                       template-haskell,
                       test-framework,
                       test-framework-hunit,
                       testpack ==2.1.3.*,
                       text,
                       transformers
