name:                TextToMath
version:             0.1.0.0
homepage:            http://github.com/nikklassen/TextToMath
author:              Nik Klassen
build-type:          Simple
cabal-version:       >=1.10

executable TextToMath
  main-is:             api/Server.hs
  other-extensions:    DeriveDataTypeable,
                       DeriveGeneric,
                       DoAndIfThenElse,
                       OverloadedStrings,
                       PatternSynonyms,
                       QuasiQuotes,
                       RecordWildCards,
                       ScopedTypeVariables
                       TemplateHaskell,
                       TypeFamilies,
  build-depends:       HUnit,
                       acid-state,
                       aeson,
                       base,
                       bytestring,
                       containers,
                       deepseq,
                       deepseq-generics,
                       happstack-server,
                       hothasktags,
                       lifted-base,
                       mtl,
                       numbers,
                       parsec,
                       safecopy,
                       statestack,
                       syb,
                       system-uuid,
                       template-haskell,
                       test-framework,
                       test-framework-hunit,
                       testpack,
                       text,
                       transformers
